--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -16,6 +16,9 @@ jobs:
       - name: NPM install
         run: npm ci
 
+      - name: test NPM package
+        run: npm run test
+
       - name: Build NPM package
         run: npm run build
 
