--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "sideEffects": false,
   "scripts": {
     "patch": "npm version patch",
+    "test": "jest --coverage",
     "build": "rm -rf dist; npm run build:lib -- --analyze=verbose; tsc --emitDeclarationOnly",
     "build:lib": "esbuild ./index.ts --bundle --platform=neutral --outdir=dist --target=es2015 --minify --tree-shaking=true --sourcemap=external --format=esm",
     "update": "npx npm-check-updates -u"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "esbuild": "^0.19.5",
+    "jest": "^29.7.0",
     "prettier": "^3.0.3",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "repository": {
