--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "sideEffects": false,
   "scripts": {
+    "minor": "npm version minor",
     "patch": "npm version patch",
     "test": "jest --coverage",
     "build": "rm -rf dist; npm run build:lib -- --analyze=verbose; tsc --emitDeclarationOnly",
