chore: exclude *.test.ts files from tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["**/*.test.ts"]
 }
